# box_bot_ros2

./: .gitignore  frames_2026-01-07_20.35.55.gv  frames_2026-01-12_13.30.35.gv  project_creation_roadmap.ipynb
install/: local_setup.sh  setup.sh
install/box_bot_description/lib/box_bot_description/: obstacle_avoider
install/box_bot_description/share/box_bot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/box_bot_description/share/box_bot_description/launch/: sim.launch.py
install/box_bot_description/share/box_bot_description/urdf/: box_bot.urdf
log/: latest_build
src/box_bot_description/: package.xml  setup.cfg  setup.py
src/box_bot_description/box_bot_description/: obstacleavoider.py
src/box_bot_description/config/: nav2_params.yaml
src/box_bot_description/launch/: navigation.launch.py  sim.launch.py
src/box_bot_description/maps/: my_map.pgm  my_map.yaml  my_new_mapp.pgm  my_new_mapp.yaml
src/box_bot_description/urdf/: box_bot.urdf
src/box_bot_description/world/: my_world.world
